Правки по комментариям